fix z-index issue with graph

--- a/htmljs/src/styles/layout/_base.scss
+++ b/htmljs/src/styles/layout/_base.scss
@@ -116,7 +116,7 @@
             display: block;
             width: 100vw;
             height: 100vh;
-            right: -16px;
+            right: 0;
             top: 0;
             background: #ededed;
             list-style-type: none;
